--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
-
 [tox]
 envlist = py27, py35
 
-[testenv:linked]
-commands = py.test src/linked --cov=src/linked --cov-report term-missing
+[testenv]
+commands = py.test src --cov=src --cov-report term-missing
 deps =
     pytest
     pytest-cov
